tests/NormalTests/paczka1/small_fuzzy/95669992.err
Error in line 5: KVpD6rpi S737 19,0
Error in line 6: CuUP A634 87,0
Error in line 1: 17PAq A634 71,4
Error in line 10: wHnub S774 22,8
Error in line 7: KVpD6rpi S774 94,5
